--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="author" content="Christopher Agia">
+    <meta name="author" content="Kopal Garg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>Kopal Garg - Machine Learning and Time-Series</title>
@@ -83,7 +83,7 @@
           <tr style="padding:0px">
 
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/kopal_garg.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/chrisagia_circle.png" class="hoverZoomLink"></a>
+              <a href="/images/kopal_garg.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/kopal_garg.png" class="hoverZoomLink"></a>
             </td>
 
             <td style="padding:2.5%;width:63%;vertical-align:middle;background-color: #f9f9f9">
