--- a/index.html
+++ b/index.html
@@ -93,14 +93,13 @@
               <p>
                 I am a first-year masters student in Computer Science at the University of Toronto and a member of the 
                 <a href="https://vectorinstitute.ai/">Vector Institute</a>.
-                I'm advised by <a href="goldenberglab.ca"><strong>Dr. Anna Goldenberg</strong></a>.
+                I'm advised by <a href="https://goldenberglab.ca"><strong>Dr. Anna Goldenberg</strong></a>.
               </p>
               <p>
                 My research focuses on AI in healthcare, and I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series. 
-                I've had the pleasure of working with <a href="bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> as a data science intern during my time at University of Waterloo.
                   I graduated from the 
                   <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
-                  at the University of Waterloo. I've been fortunate to collaborate with <a href="bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
+                  at the University of Waterloo. I've been fortunate to collaborate with <a href="https://bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
                   <a href="https://www.broadinstitute.org/">the Broad Institute</a>, Dr. Rosanna Weksberg and Dr. Sanaa Choufani
                   at <a href="http://sickkids.ca/">SickKids Institute</a>, Dr. Janet Ronsky and Dr. Tomasz Bugajski at the 
                   <a href="https://mccaig.ucalgary.ca/">McCaig Institute</a>, and colleagues from 
