--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <a href="https://www.ibm.com/ca-en">IBM Labs</a>. 
               </p>
               <p>
-                I intend to set aside a few hours each week for research discussions and mentorship. If you feel this could be of 
+                I set aside a few hours each week for research discussions and mentorship. If you feel this could be of 
                 benefit to you, please book an open slot <a href="https://calendly.com/gargkopal24/15min">here</a>.
               </p>
               
