--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <br>
                 Department of Computer Science, University of Toronto
               <br>
-                Sep 2021 | Toronto, ON
+                Sept. 2021 - Present | Toronto, ON
               <p> </p> 
               <em><strong>Graduate Scholarship</strong></em>
             </td>
@@ -168,7 +168,7 @@
               <br>
                 Faculty of Applied Science and Engineering, University of Waterloo 
               <br>
-                Sep 2016 - May 2021 | Waterloo, ON
+                Sept. 2016 - May 2021 | Waterloo, ON
               <p> </p> 
               <em><strong>President's Scholarship</strong></em>
               <br>
