--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p>
                 I am a first-year masters student in Computer Science at the University of Toronto and a member of the 
                 <a href="https://vectorinstitute.ai/">Vector Institute</a>.
-                I'm advised by <a href="https://goldenberglab.ca"><strong>Dr. Anna Goldenberg</strong></a>.
+                I'm advised by <strong>Dr. Anna Goldenberg</strong>.
               </p>
               <p>
                 My research focuses on AI in healthcare, and I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series. 
