--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
                   at the University of Waterloo. I've been fortunate to collaborate with <a href="https://bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
                   <a href="https://www.broadinstitute.org/">the Broad Institute</a>, Dr. Rosanna Weksberg and Dr. Sanaa Choufani
-                  at <a href="http://sickkids.ca/">SickKids Institute</a>, Dr. Janet Ronsky and Dr. Tomasz Bugajski at the 
+                  at <a href="http://sickkids.ca/">the SickKids Institute</a>, Dr. Janet Ronsky and Dr. Tomasz Bugajski at the 
                   <a href="https://mccaig.ucalgary.ca/">McCaig Institute</a>, and colleagues from 
                   <a href="https://www.ibm.com/ca-en">IBM Labs</a>. 
               </p>
@@ -306,7 +306,7 @@
             <td width="75%" valign="middle">
               <papertitle>ML Researcher</papertitle>
               <br>
-                <a href="https://vectorinstitute.ai/">Vector Institute</a>, <a href="https://rvl.cs.toronto.edu/">Goldenberg Lab</a> | Advised by <a href="goldenberg.ca">Prof. Anna Goldenberg</a>  
+                <a href="https://vectorinstitute.ai/">Vector Institute</a>, <a href="https://goldenberg.ca">Goldenberg Lab</a> | Advised by <a href="https://goldenberg.ca">Prof. Anna Goldenberg</a>  
               <br>
                 <a href="https://web.cs.toronto.edu/">Department of Computer Science</a>, University of Toronto
               <br>
@@ -321,7 +321,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/IBM.png" alt="clean-usnob" width="120" height="120">
+              <img src="images/IBM.svg" alt="clean-usnob" width="120" height="120">
             </td>
             <td width="75%" valign="middle">
               <papertitle>IBM</papertitle>
