--- a/index.html
+++ b/index.html
@@ -179,6 +179,59 @@
         </div>
         <p></p>
 
+        
+        <!-- Work Experience -->
+        <button class="accordion">..Work Experience</button>
+        <div class="panel">
+        <p></p>
+        <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Work Experience</heading>
+            </td>
+          </tr>
+        </tbody></table> -->
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/vector_institute_logo.jpg" alt="clean-usnob" width="120" height="120">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>ML Researcher</papertitle>
+              <br>
+                <a href="https://vectorinstitute.ai/">Vector Institute</a>, <a href="https://goldenberg.ca">Goldenberg Lab</a> | Advised by <a href="https://goldenberg.ca">Prof. Anna Goldenberg</a>  
+              <br>
+                <a href="https://web.cs.toronto.edu/">Department of Computer Science</a>, University of Toronto
+              <br>
+                May 2021 - <strong>Present</strong> | Toronto, ON
+              <p>
+                Research in artificial intelligence and healthcare. Topics include time-series, change-point detection.
+              </p> 
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/IBM.svg" alt="clean-usnob" width="120" height="120">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>IBM</papertitle>
+              <br>
+                <a href="ibm.ca">IBM</a>
+              <br>
+                May 2022 - Aug 2022 | Toronto, ON
+              <p> 
+                TODO
+              </p> 
+            </td>
+          </tr>
+        </tbody></table>
+
+        </div>
+        <p></p>
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
