--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
         <p></p>
 
-        
+
         <!-- Work Experience -->
         <button class="accordion">..Work Experience</button>
         <div class="panel">
@@ -212,24 +212,41 @@
           </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>  
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/IBM.svg" alt="clean-usnob" width="120" height="120">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>IBM</papertitle>
+              <papertitle>Data Scientist Intern</papertitle>
               <br>
-                <a href="ibm.ca">IBM</a>
+                <a href="https://ibm.ca/">IBM</a> 
               <br>
-                May 2022 - Aug 2022 | Toronto, ON
-              <p> 
+                May 2022 - <strong>Aug. 2022</strong> | Toronto, ON
+              <p>
                 TODO
               </p> 
             </td>
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/broad.png" alt="clean-usnob" width="120" height="120">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Data Scientist Intern</papertitle>
+              <br>
+                <a href="https://broadinstitute.org/">Broad Institue of MIT and Harvard</a> 
+              <br>
+                May 2019 - <strong>May 2021</strong> | Toronto, ON
+              <p>
+                Research in computational biology, genome-wide association studies, singel-cell RNA sequencing studies.
+              </p> 
+            </td>
+          </tr>
+        </tbody></table>
         </div>
         <p></p>
     <script>
