--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
 
 
         <!-- Work Experience -->
-        <button class="accordion">..Work Experience</button>
-        <div class="panel">
+        <div>
         <p></p>
         <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
