--- a/index.html
+++ b/index.html
@@ -181,15 +181,14 @@
 
 
         <!-- Work Experience -->
-        <div>
         <p></p>
-        <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
               <heading>Work Experience</heading>
             </td>
           </tr>
-        </tbody></table> -->
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
