--- a/index.html
+++ b/index.html
@@ -181,14 +181,13 @@
 
 
         <!-- Work Experience -->
-        <p></p>
-        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>
           <tr>
-            <td>
-              <heading>Work Experience</heading>
-            </td>
-          </tr>
-        </tbody></table>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Work Experience</heading>
+          </td>
+        </tr>
+      </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
