--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <tbody>
           <tr>
             <td style="text-align: right; background-color: #eee">
-              <heading style="font-family: monospace; font-size: 22px; color: #444">..Education</heading>
+              <heading style="font-family: monospace; font-size: 22px; color: #444">Education</heading>
             </td>
           </tr>
           </tbody>
@@ -181,13 +181,13 @@
 
 
         <!-- Work Experience -->
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Work Experience</heading>
-          </td>
-        </tr>
-      </tbody></table>
+            <td style="text-align: right; background-color: #eee">
+              <heading style="font-family: monospace; font-size: 22px; color: #444">Work Experience</heading>
+            </td>
+          </tr>
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
