--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <td width="75%" valign="middle">
               <papertitle>Data Scientist Intern</papertitle>
               <br>
-                <a href="https://ibm.ca/">IBM</a> 
+                <a href="https://www.ibm.com/ca-en">IBM</a> 
               <br>
                 May 2022 - <strong>Aug. 2022</strong> | Toronto, ON
               <p>
