--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <name>Kopal Garg</name>
               </p>
               <p>
-                I am a first-year masters student in Computer Science at the University of Toronto and a member of the 
+                I am a masters student in Computer Science at the University of Toronto and a member of the 
                 <a href="https://vectorinstitute.ai/">Vector Institute</a>.
                 I'm advised by Dr. Anna Goldenberg.
               </p>
