--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
               <p style="text-align:center">
                 kopal[at]cs.toronto.edu &nbsp/&nbsp
-                <a href="data/kopal_garg.pdf">CV</a> &nbsp/&nbsp
+                <a>contact for CV</a> &nbsp/&nbsp
                 <a href="http://www.linkedin.com/in/gargkopal/"> LinkedIn</a> &nbsp/&nbsp
                 <a href="https://github.com/kopalgarg/"> GitHub</a>
               </p>
