--- a/index.html
+++ b/index.html
@@ -259,7 +259,24 @@
           </tbody>
         </table>
 
-        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/choufani.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>DNA Methylation Signature for EZH2 Functionally Classifies Sequence Variants in Three PRC2 Complex Genes</papertitle>
+              <br>
+              Sanaa Choufani, William T Gibson, Andrei L Turinsky, Brian H Y Chung, Tianren Wang, <strong>Kopal Garg</strong>, Alessandro Vitriol, [...], Rosanna Weksberg
+              <br>
+              <em>American Journal of Human Genetics)</em>, 2020
+              <br>
+              <a href="https://pubmed.ncbi.nlm.nih.gov/32243864/">pubmed</a>
+              <p>Using genome-wide DNA methylation (DNAm) data for 187 individuals with OGID and 969 control subjects, we show that pathogenic variants in EZH2 generate a highly specific and sensitive DNAm signature reflecting the phenotype of WS.</p>
+            </td>
+          </tr>
+        </tbody></table>
+
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
