--- a/index.html
+++ b/index.html
@@ -258,6 +258,23 @@
           </tr>
           </tbody>
         </table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/braceworks.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Reliability of a Three-Dimensional Scanning Technique and Metrics Quantifying Pectus Deformities</papertitle>
+              <br>
+              Tomasz Bugajski, Bahareh Vafadar, Emma Gray, <strong>Kopal Garg</strong>, Marc Schneider, [...] Janet Ronsky
+              <br>
+              <em>International Society of Biomechanics</em>, 2019
+              <br>
+              <a href="https://pubmed.ncbi.nlm.nih.gov/32243864/">pubmed</a>
+            </td>
+          </tr>
+        </tbody></table>
+
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
@@ -269,7 +286,7 @@
               <br>
               Sanaa Choufani, William T Gibson, Andrei L Turinsky, Brian H Y Chung, Tianren Wang, <strong>Kopal Garg</strong>, Alessandro Vitriol, [...], Rosanna Weksberg
               <br>
-              <em>American Journal of Human Genetics)</em>, 2020
+              <em>American Journal of Human Genetics</em>, 2020
               <br>
               <a href="https://pubmed.ncbi.nlm.nih.gov/32243864/">pubmed</a>
               <p>Using genome-wide DNA methylation (DNAm) data for 187 individuals with OGID and 969 control subjects, we show that pathogenic variants in EZH2 generate a highly specific and sensitive DNAm signature reflecting the phenotype of WS.</p>
