--- a/index.html
+++ b/index.html
@@ -262,17 +262,17 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/braceworks.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/verboon.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle></papertitle>
+              <papertitle>Familial thrombocytopenia due to a complex structural variant resulting in a WAC-ANKRD26 fusion transcript</papertitle>
               <br>
               Verboon, J., Wahlster, L., Ludwig, L., Black, S., Luo, W., <strong>Garg, K.</strong>, Collins, R.,
 Garimella, K., Costello, M., Chao, K., Ditroia, S., O’Donnell-Luria, A., Talkowski, M., Michelson, A., Cantor, A., Sankaran, V.
               <br>
               <em>Journal of Experimental Medicine</em>, 2021
               <br>
-              <a href="https://pubmed.ncbi.nlm.nih.gov/32243864/">pubmed</a>
+              <a href="https://rupress.org/jem/article/218/6/e20210444/211998/Familial-thrombocytopenia-due-to-a-complex">pubmed</a>
             </td>
           </tr>
         </tbody></table>
