--- a/index.html
+++ b/index.html
@@ -265,6 +265,24 @@
               <img src="images/verboon.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
+              <papertitle>Cellular states, purifying selection, and clonal dynamics in Pearson syndrome revealed via single-cell multi-omics</papertitle>
+              <br>
+              Caleb A. Lareau, Sonia M. Dubois, <strong>Kopal Garg</strong>, Pauline Kautz, Lena Nitsch, Samantha Praktiknjo, Jeffrey M. Verboon, Wendy Lu, Eleni Mimitou, Christoph Muus, Rhea
+Malhotra, Patrick Maschmeyer, Sumit Parikh, Mark D. Fleming, Anshul Kundaje, Peter Smibert, Ansuman T. Satpathy, Aviv
+Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
+              <br>
+              <em>In submission</em>, 2022
+              <br>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/verboon.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
               <papertitle>Familial thrombocytopenia due to a complex structural variant resulting in a WAC-ANKRD26 fusion transcript</papertitle>
               <br>
               Verboon, J., Wahlster, L., Ludwig, L., Black, S., Luo, W., <strong>Garg, K.</strong>, Collins, R.,
