--- a/index.html
+++ b/index.html
@@ -258,6 +258,21 @@
           </tr>
           </tbody>
         </table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/garg2.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Categorizing Change Points with Time Varying Networks</papertitle>
+              <br>
+              <strong>Kopal Garg</strong>, Sana Tonekaboni, Anna Goldenberg
+              <br>
+              <em>In submission</em>, 2022
+              <br>
+            </td>
+          </tr>
+        </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
@@ -280,17 +295,16 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/verboon.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/garg.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Familial thrombocytopenia due to a complex structural variant resulting in a WAC-ANKRD26 fusion transcript</papertitle>
+              <papertitle>Classification of Chest X-Rays Using Shallow and Deep Learning Methods</papertitle>
               <br>
-              Verboon, J., Wahlster, L., Ludwig, L., Black, S., Luo, W., <strong>Garg, K.</strong>, Collins, R.,
-Garimella, K., Costello, M., Chao, K., Ditroia, S., O’Donnell-Luria, A., Talkowski, M., Michelson, A., Cantor, A., Sankaran, V.
+              <strong>Kopal Garg</strong>, Rohan Ajwani, Charita Koya, Yash Prakash
               <br>
-              <em>Journal of Experimental Medicine</em>, 2021
+              <em>CSC2515</em>, 2021
               <br>
-              <a href="https://rupress.org/jem/article/218/6/e20210444/211998/Familial-thrombocytopenia-due-to-a-complex">rupress</a>
+              <a href="data/CSC2515 Final Report.pdf">csc2515</a>
             </td>
           </tr>
         </tbody></table>
