--- a/index.html
+++ b/index.html
@@ -304,11 +304,27 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <br>
               <em>CSC2515</em>, 2021
               <br>
-              <a href="data/CSC2515 Final Report.pdf">csc2515</a>
+              <a href="data/CSC2515 Final Report.pdf">report</a>
             </td>
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/rui.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Anti-Asian Hate Speech Classification</papertitle>
+              <br>
+              Ian Rui, Charita Koya, <strong>Kopal Garg</strong>
+              <br>
+              <em>CSC2612</em>, 2021
+              <br>
+              <a href="data/CSC2612-final-report.pdf">report</a>
+            </td>
+          </tr>
+        </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
