--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
               <strong>Kopal Garg</strong>, Sana Tonekaboni, Anna Goldenberg
               <br>
               <em>In submission</em>, 2022
+              <a href="https://github.com/kopalgarg/TiVaCPD">github</a>
               <br>
             </td>
           </tr>
@@ -287,6 +288,7 @@ Malhotra, Patrick Maschmeyer, Sumit Parikh, Mark D. Fleming, Anshul Kundaje, Pet
 Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <br>
               <em>In submission</em>, 2022
+              <a href="https://github.com/caleblareau/mgatk/">github</a>
               <br>
             </td>
           </tr>
