--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <em>CSC2612</em>, 2021
               <br>
               <a href="data/CSC2612-final-report.pdf">report</a>
+              <a href="https://github.com/kopalgarg/hate_speech_classification">github</a>
             </td>
           </tr>
         </tbody></table>
