--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
           </tr>
           </tbody>
         </table>
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -363,7 +364,42 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
           </tr>
         </tbody></table>
 
+        <!-- Personal Projects  -->
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tbody>
+          <tr>
+            <td style="text-align: right; background-color: #eee">
+              <heading style="font-family: monospace; font-size: 22px; color: #444">Personal Projects</heading>
+            </td>
+          </tr>
+          </tbody>
+        </table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ery1.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Erythroid gene-expression</papertitle>
+              <a href="https://github.com/kopalgarg/erythroid-gene-expression">github</a>
+              <a href="https://sankaranlab.shinyapps.io/geneExpression">app</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/gnomad.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>gnomAD Gene Model</papertitle>
+              <a href="https://github.com/kopalgarg/gnomAD_gene_model">github</a>
+              <a href="https://sankaranlab.shinyapps.io/gnomad_gene_model">app</a>
+            </td>
+          </tr>
+        </tbody></table>
 
     <script>
       var acc = document.getElementsByClassName("accordion");
