--- a/index.html
+++ b/index.html
@@ -401,6 +401,18 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/gggwas.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>R package for various Genome-Wide Association Study visualizations</papertitle>
+              <a href="https://github.com/kopalgarg/gwas-vis">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
