--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
                 May 2022 - <strong>Aug. 2022</strong> | Toronto, ON
               <p>
                 
-                Developed content for IBM's Deep Learning and Reinforcement Learning course on Coursera with ~10k learners. 
+                * Developed content for IBM's Deep Learning and Reinforcement Learning course on Coursera with ~10k learners. 
                 <br>
-                Created several guided projects with 150+ learners.
+                * Created several guided projects with 150+ learners.
                 
               </p> 
-              <a href="https://www.coursera.org/learn/deep-learning-reinforcement-learning">coursera</a>
-              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX07C7EN+v1">GP on PyScript</a>
-              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0SPHEN+v1">GP on ML Explainability</a>
-              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0UKXEN+v1">GP on sequential data</a>
+              <a href="https://www.coursera.org/learn/deep-learning-reinforcement-learning">coursera</a> |
+              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX07C7EN+v1">GP on PyScript</a> |
+              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0SPHEN+v1">GP on ML Explainability</a> |
+              <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0UKXEN+v1">GP on sequential data</a> |
               <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0CXEEN+v1">GP on transfer learning</a>
 
               <a href="https://www.coursera.org/learn/deep-learning-reinforcement-learning">coursera</a>
