--- a/index.html
+++ b/index.html
@@ -232,8 +232,6 @@
               <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0SPHEN+v1">GP on ML Explainability</a> |
               <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0UKXEN+v1">GP on sequential data</a> |
               <a href="https://cognitiveclass.ai/courses/course-v1:IBM+GPXX0CXEEN+v1">GP on transfer learning</a>
-
-              <a href="https://www.coursera.org/learn/deep-learning-reinforcement-learning">coursera</a>
             </td>
           </tr>
         </tbody></table>
@@ -392,7 +390,8 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/ery1.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Erythroid gene-expression</papertitle>
+              <papertitle>App for schematic of gene expression during adult and fetal erythropoiesis
+              </papertitle>
               <br>
               <a href="https://github.com/kopalgarg/erythroid-gene-expression">github</a>
               <br>
@@ -425,6 +424,32 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <papertitle>R package for various Genome-Wide Association Study visualizations</papertitle>
               <br>
               <a href="https://github.com/kopalgarg/gwas-vis">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/hair.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Deep Learning for face shape classification and hair-style recommendation</papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/hair-style-recommendation">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="fog.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Freezing of Gate (FOG) detection in Parkinson's Disease</papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/freezing_of_gait">github</a>
             </td>
           </tr>
         </tbody></table>
