--- a/index.html
+++ b/index.html
@@ -454,6 +454,34 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="coch.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Cochlear implant processing MATLAB simulation program
+              </papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/cochlear_implant_simulation">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="rna.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>R-shiny app to visualize frequncies of isoforms within single genes for different hematopoietic cell lines
+              </papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/rna-seq_transcript-count">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
