--- a/index.html
+++ b/index.html
@@ -482,6 +482,33 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
           </tr>
         </tbody></table>
 
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="p.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>Long-term facility patient tracking system 
+              </papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/patient_tracking_system">github</a>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="vv.png" alt="clean-usnob" width="140" height="140">
+            </td>
+            <td width="75%" valign="middle">
+              <papertitle>App for interactive variant tables for easy filtering
+              </papertitle>
+              <br>
+              <a href="https://github.com/kopalgarg/variantviewer">github</a>
+            </td>
+          </tr>
+        </tbody></table>
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
