--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="fog.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/fog.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Freezing of Gate (FOG) detection in Parkinson's Disease</papertitle>
@@ -513,7 +513,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="coch.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/coch.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Cochlear implant processing MATLAB simulation program
@@ -527,7 +527,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="rna.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/rna.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
               <papertitle>R-shiny app to visualize frequncies of isoforms within single genes for different hematopoietic cell lines
@@ -541,7 +541,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="p.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/p.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Long-term facility patient tracking system 
@@ -555,7 +555,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color: #f9f9f9;"><tbody>  
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="vv.png" alt="clean-usnob" width="140" height="140">
+              <img src="images/vv.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
               <papertitle>App for interactive variant tables for easy filtering
