--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 My research focuses on AI in healthcare, and I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series. 
                   I graduated from the 
                   <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
-                  at the University of Waterloo. I've been fortunate to collaborate with <a href="https://bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
+                  at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. I've been fortunate to collaborate with <a href="https://bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
                   <a href="https://www.broadinstitute.org/">the Broad Institute</a>, Dr. Rosanna Weksberg and Dr. Sanaa Choufani
                   at <a href="http://sickkids.ca/">the SickKids Institute</a>, Dr. Janet Ronsky and Dr. Tomasz Bugajski at the 
                   <a href="https://mccaig.ucalgary.ca/">McCaig Institute</a>, and colleagues from 
@@ -246,7 +246,7 @@
               <br>
                 <a href="https://broadinstitute.org/">Broad Institue of MIT and Harvard</a> 
               <br>
-                Jan. 2020 - <strong>Aug 2021</strong> | Cambridge, MA
+                May. 2019 - <strong>Aug 2021</strong> | Cambridge, MA
               <p>
                 Research in computational biology, genome-wide association studies, singel-cell RNA sequencing studies.
               </p> 
@@ -254,65 +254,9 @@
           </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/broad.png" alt="clean-usnob" width="120" height="120">
-            </td>
-            <td width="75%" valign="middle">
-              <papertitle>Data Scientist Intern</papertitle>
-              <br>
-                <a href="https://broadinstitute.org/">Broad Institue of MIT and Harvard</a> 
-              <br>
-                May 2019 - <strong>Aug 2019</strong> | Cambridge, MA
-              <p>
-                Research in computational biology, genome-wide association studies, singel-cell RNA sequencing studies.
-              </p> 
-            </td>
-          </tr>
-        </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/ucalgary.png" alt="clean-usnob" width="120" height="120">
-            </td>
-            <td width="75%" valign="middle">
-              <papertitle>Data Scientist Intern</papertitle>
-              <br>
-                <a href="https://ucalgary.ca/">McCaig Institute</a> 
-              <br>
-                Sept. 2018 - <strong>Dec. 2018</strong> | Calgary, AB
-              <p>
-                Research in computational biomechanics, pectus carinatum, 3D modeling.
-              </p> 
-            </td>
-          </tr>
-        </tbody></table>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/sickkids.png" alt="clean-usnob" width="120" height="120">
-            </td>
-            <td width="75%" valign="middle">
-              <papertitle>Data Scientist and Computational Biology Intern</papertitle>
-              <br>
-                <a href="https://sickkids.ca/">SickKids Research Institute</a> 
-              <br>
-                Jan. 2018 - <strong>Apr. 2018</strong> | Toronto, ON
-              <p>
-                Research in computational biology, DNA methylation and epigenetics.
-              </p> 
-            </td>
-          </tr>
-        </tbody></table>
-
-        
         </div>
         <p></p>
-
-
+        
         <!-- Research Projects  -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tbody>
